# jpegpixi

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  acinclude.m4  config.h.in  configure  configure.ac  consolidate.c  dct.c  file.c  interpolate.c  jfif.c  jpeghotp.c  jpeghotp.opag  jpegpixi.c  jpegpixi.h  jpegpixi.opag  jpegwrapper.h.in  opthotp.c  opthotp.h  optpixi.c  optpixi.h  parsenum.c  rbtree.c  rbtree.h  strerror.c  util.c  util.h  weights.c
man/: Makefile.am  Makefile.in  jpeghotp.1.in  jpegpixi.1.in
man/de/: Makefile.am  Makefile.in  jpeghotp.1.in  jpegpixi.1.in
man/fi/: Makefile.am  Makefile.in  jpeghotp.1.in  jpegpixi.1.in
man/fr/: Makefile.am  Makefile.in  jpeghotp.1.in  jpegpixi.1.in
po/: Makefile.am  Makefile.in  POTSOURCES  de.gmo  de.po  fi.gmo  fi.po  fr.gmo  fr.po  jpegpixi.pot
