## Process this file with automake to produce Makefile.in.
## This file is part of jpegpixi, a program to interpolate pixels in
## JFIF image files.
## Copyright (C) 2004 Martin Dickopp
##
## This file is free software; the copyright holder gives unlimited
## permission to copy and/or distribute it, with or without
## modifications, as long as this notice is preserved.
##
## This program is distributed in the hope that it will be useful,
## but WITHOUT ANY WARRANTY, to the extent permitted by law; without
## even the implied warranty of MERCHANTABILITY or FITNESS FOR A
## PARTICULAR PURPOSE.

mandir = @mandir@/fr

man1_MANS = jpegpixi.1 jpeghotp.1
